# Audio_Playback_System

./: README.md
.metadata/: version.ini
.metadata/.plugins/org.eclipse.cdt.core/: file_upload.1722719227095.pdom
.metadata/.plugins/org.eclipse.core.resources/.projects/.org.eclipse.egit.core.cmp/: .location
.metadata/.plugins/org.eclipse.core.resources/.projects/file_upload/: .location  .markers
.metadata/.plugins/org.eclipse.core.resources/.projects/file_upload/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.root/: 1.tree
.metadata/.plugins/org.eclipse.core.resources/.root/.indexes/: properties.index
.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
.metadata/.plugins/org.eclipse.ltk.core.refactoring/.refactorings/.workspace/2024/8/31/: refactorings.history  refactorings.index
.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
audio_player/: .cproject  .project  CMakeLists.txt
audio_player/lib/audio_output/src/: Output.cpp
audio_player/src/: .cproject  config.h  main.cpp  w25qxx.c  w25qxx.h
file_upload/: .cproject  .project  sdkconfig.old
file_upload/main/: .cproject  CMakeLists.txt  http_server.c  http_server.h  main.c  tasks_common.h  wifi_app.c  wifi_app.h
file_upload/main/webpage/: app.css  app.js  index.html
